Check if player wants to see posssible moves, fix tabs, shift  undo button to first tab

--- a/src/styles/tabs.sass
+++ b/src/styles/tabs.sass
@@ -9,13 +9,14 @@
 
 .settings__panel
     min-width: 30%
+    max-width: 30%
     background-color: #464646
     height: 98%
     margin-left:2%
     margin-right:2%
     margin-top: 5px
-    display:flex
     max-height: 100%
+    position: relative
 
 ul 
   list-style: none
@@ -31,6 +32,10 @@ ul
     background-color: #555
     min-height: 70px
     flex-wrap: wrap
+
+    :hover
+      cursor: pointer
+
 
     img 
       width: 15%
@@ -48,7 +53,9 @@ ul
       padding: 10px
       text-justify: center
 
-
+.clicked
+  background-color: #464646
+  
 .nav .active a 
   color: #C1C1C1
 
@@ -58,6 +65,7 @@ ul
   
 .nav__tab
   margin-bottom:0
+  width: 100%
   
 .tab__pane 
   display: none
@@ -65,13 +73,22 @@ ul
 .tab__pane.active  
   display: block
 
+.tab__container
+  width:100%
+  max-width: 100%
+
+.tab__content
+  width: 100%
+  max-width:100%
+
 .info
 
-  width: 95%
-  height: 50px
+  max-width: 100%
+  height: 70px
   display: flex
   align-items: center
   padding-left: 5%
+  box-sizing: border-box
 
   &:nth-of-type(odd)
     background-color: #555
@@ -84,6 +101,7 @@ ul
   box-shadow: 0px 2px 15px #FF6E00
   border-radius: 5px
   font-weight: 500
+  font-size: 20px
   self-align: center
   display: block
   margin-left: auto
@@ -92,4 +110,22 @@ ul
 .revert__button:hover
   background-color: #FA6009
   color: #FFF
+
+.undo__button__container
+  min-width: 340px
+  width: 100%
+  position: absolute
+  bottom: 25px
+  display: flex
+  justify-content: center
+  
+
+
+@media(max-width:800px)
+  .info
+    min-height: 70px
+  .settings__panel
+    min-width: 400px
+    
+
 
